# py-bootstrap

./: .gitignore  CHANGELOG.md  Justfile  LICENSE  README.md  cookiecutter.json  copier.yml  extensions.py  pyproject.toml  zensical.toml
.github/workflows/: code_quality.yml
docs/: create.md  index.md  setup.md  template.md  update.md
hooks/: post_gen_project.py
template/: .pre-commit-config.yaml  .python-version.jinja  CONTRIBUTING.md.jinja  Justfile.jinja  LICENSE.jinja  README.md.jinja  pyproject.toml.jinja  zensical.toml  {% if ci_gitlab %}.gitlab-ci.yml{% endif %}.jinja  {% if docs_engine == "mkdocs" %}mkdocs.yml{% endif %}.jinja  {% if include_docs %}zensical.toml{% endif %}.jinja
template/src/{{py_import_name}}/: __init__.py.jinja
template/tests/: smoke_test.py  test_meta.py.jinja
template/{% if ci_github %}.github{% endif %}/workflows/: docs.yml  publish.yml  publish.yml.jinja  test_coverage.yml.jinja  test_platform.yml.jinja
template/{% if include_docs %}docs{% endif %}/: index.md
template/{% if include_docs %}docs{% endif %}/reference/: api.md.jinja
tests/: conftest.py  test_copier.py  test_docs.py  test_jinja_tags.py  test_licenses.py
{{cookiecutter.project_name}}/: .gitlab-ci.yml  .python-version  CONTRIBUTING.md  Justfile  LICENSE  README.md  pyproject.toml  zensical.toml
{{cookiecutter.project_name}}/.github/actions/setup/: action.yml
{{cookiecutter.project_name}}/.github/workflows/: code_quality.yml  publish.yml  run_tests.yml  test_coverage.yml  test_platform.yml
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_name}}/tests/: test_meta.py
